Create 2 public constructors for MockNode
Signed-off-by: Craig Perkins <cwperx@amazon.com>